[gd_scene load_steps=7 format=3 uid="uid://ccly1yepogxea"]

[ext_resource type="Texture2D" uid="uid://ddwrv72g762wx" path="res://assets/sprites/world_tileset.png" id="1_b1ron"]
[ext_resource type="Script" path="res://scripts/falling_block.gd" id="1_xivg6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_waigr"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_4bhll"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kf710"]
resource_name = "regenerate"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j1uq6"]
_data = {
"RESET": SubResource("Animation_4bhll"),
"regenerate": SubResource("Animation_kf710")
}

[node name="FallingBlock" type="RigidBody2D"]
mass = 20.0
freeze = true
script = ExtResource("1_xivg6")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_b1ron")
region_enabled = true
region_rect = Rect2(128, 32, 16, 16)

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_waigr")
one_way_collision = true

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -27)
collision_mask = 3

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j1uq6")
}

[connection signal="timeout" from="FallTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
